Wrong website patched.

--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
     const data = [
       {"url": "https://purplesstrat.github.io/eagler", "status": "working"},
       {"url": "https://2slick4u.vercel.app/", "status": "working"},
-      {"url": "https://very-educational-game.vercel.app/", "status": "patched"},
+      {"url": "https://very-educational-game.vercel.app/", "status": "working"},
       {"url": "https://mathstests.vercel.app/", "status": "working"},
-      {"url": "https://learn-coding.vercel.app/", "status": "working"},
+      {"url": "https://learn-coding.vercel.app/", "status": "patched"},
       {"url": "https://wireps.vercel.app/", "status": "working"},
       {"url": "https://smoothwall-security.vercel.app/", "status": "working"},
       {"url": "https://smoothwall-api.vercel.app/", "status": "working"},
