Better website title name.

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       meta.className = 'meta';
       const title = document.createElement('div');
       title.className = 'title';
-      title.textContent = `${entry.status.toUpperCase()} COPY`;
+      title.textContent = `This copy is ${entry.status.toLowerCase()}`;
       const urlEl = document.createElement('div');
       urlEl.className = 'url';
       urlEl.textContent = entry.url;
